# outputllsp3

./: .gitignore  CHANGELOG.md  FLL2026.py  INSTALL.txt  PACKAGE_STRUCTURE.md  PATCH_NOTES.md  README.md  setup.cfg  spike-scratch-reverse-engineering.md
docs/: FACADE_GUIDE.md  SCRATCH_MODULES.md  SPIKE_OFFICIAL_SUPPLEMENT.md  SPIKE_PYTHON_FACADE.md  SPIKE_WRAPPER_MAPPING.md  STRICT_VERIFIED.md  WRAPPER_FACADE.md
examples/: 01_spike_builder_hello.py  02_spike_builder_robot.py  03_spike_builder_sensors.py  04_spike_builder_display.py  05_flow_helpers.py  06_variables_and_lists.py  07_transpile_unified.py  08_auto_layout.py  09_namespaced_modules.py  10_new_enums.py  11_pid_robot.py  12_python_first_sensors.py  13_competition_run.py  14_event_handlers.py  15_stdlib_demo.py  16_pid_advanced.py  README.md  hello_build.py  python_first_defaults.py  python_first_return.py  python_first_robot.py  strict_build.py
outputllsp3/: __init__.py  api.py  ast_transpiler.py  builder.py  catalog.py  cli.py  enums.py  exporter.py  flow.py  locale.py  metadata.py  parser.py  project.py  pythonfirst.py  schema.py  spikepython.py  stdlib.py  transpiler.py  version.py  workflow.py  wrapper.py
outputllsp3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: __init__.py  conftest.py  test_api_expansion.py  test_builder.py  test_cli.py  test_core.py  test_enums.py  test_export_readable.py  test_flow_helpers.py  test_layout.py  test_new_features.py  test_package.py  test_pid.py  test_pythonfirst_enum_attrs.py  test_stdlib.py  test_transpile_unified.py  test_validation.py  (+1 more)
(+38 files in other folders)
