[metadata]
name = outputllsp3
version = 0.32.0
description = Parser, transpiler, exporter, and builder for LLSP3 projects
license = Proprietary
author = OpenAI

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =

[options.package_data]
outputllsp3 =
    resources/*.llsp3
    resources/*.json

[options.entry_points]
console_scripts =
    outputllsp3 = outputllsp3.cli:main
