[metadata]
name = outputllsp3
version = 0.35.0
description = Parser, transpiler, exporter, and builder for LEGO SPIKE LLSP3 projects
long_description = file: README.md
long_description_content_type = text/markdown
license = Proprietary
author = OranPie
keywords = lego spike scratch llsp3 transpiler robot
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Education
    Topic :: Software Development :: Compilers

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =

[options.package_data]
outputllsp3 =
    resources/*.llsp3
    resources/*.json

[options.entry_points]
console_scripts =
    outputllsp3 = outputllsp3.cli:main
